tests/reference/asr-subroutine7-b754420.stderr
semantic error: Symbol is already declared in the same scope
 --> tests/errors/subroutine7.f90:4:31
  |
4 |     integer , dimension(3) :: array
  |                               ^^^^^ redeclaration
  |
2 |     dimension array(3)
  |     ~~~~~~~~~~~~~~~~~~ original declaration
